<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInAndRegistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="687dp"
        android:layout_marginTop="8dp"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/textures" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="Brainiacs"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/fueling_your_academic_journey"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/login_email_address"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login_email_address"
        app:layout_constraintStart_toStartOf="@+id/login_email_address"
        app:layout_constraintTop_toBottomOf="@+id/login_email_address"
        app:layout_goneMarginTop="250dp"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/login"

        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_goneMarginTop="320dp"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/register_new_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="new here?"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/love_ya_like_a_sister"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/register_new_here"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/register_new_here"
        app:layout_constraintTop_toBottomOf="@+id/register_new_here"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/register_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/profile1" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_blue_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_your_name"

        android:inputType="text"

        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_blue_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"

        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintStart_toStartOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_blue_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"

        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/black"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />


</androidx.constraintlayout.widget.ConstraintLayout>